--- a/CleanArch-Application/CleanArch-Application.csproj
+++ b/CleanArch-Application/CleanArch-Application.csproj
@@ -12,4 +12,8 @@
     <ProjectReference Include="..\CleanArch-Infrastructure\CleanArch-Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="UseCases\User\" />
+  </ItemGroup>
+
 </Project>
