Feat: created endpoint for customer creation

--- a/CleanArchNet_Tests/CleanArchNet_Tests.csproj
+++ b/CleanArchNet_Tests/CleanArchNet_Tests.csproj
@@ -26,4 +26,8 @@
     <ProjectReference Include="..\CleanArch-Application\CleanArch-Application.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Integration\" />
+  </ItemGroup>
+
 </Project>
